--- a/aware-ContextPlugin/src/main/res/xml/preferences.xml
+++ b/aware-ContextPlugin/src/main/res/xml/preferences.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:key="com.aware.plugin.contextbroadcaster"
-        android:title="Context Broadcaster">
+        android:key="com.aware.plugin.context"
+        android:title="Context">
 
     <CheckBoxPreference
             android:defaultValue="false"
-            android:key="status_plugin_context_broadcaster"
+            android:key="status_plugin_context"
             android:persistent="true"
-            android:summary="Broadcasts every change in context"
+            android:summary="Stores current context"
             android:title="Active" />
 
 </PreferenceScreen>
