RF# updated constants to refer to plugin's new name

--- a/aware-PoiRecommenderPlugin/src/main/res/xml/preferences.xml
+++ b/aware-PoiRecommenderPlugin/src/main/res/xml/preferences.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:key="com.aware.plugin.context"
-        android:title="Context">
+        android:key="com.aware.plugin.poirecommender"
+        android:title="PoiRecommender">
 
     <CheckBoxPreference
             android:defaultValue="false"
-            android:key="status_plugin_context"
+            android:key="status_plugin_poirecommender"
             android:persistent="true"
-            android:summary="Stores current context"
+            android:summary="Stores PoiRecommender data"
             android:title="Active" />
 
 </PreferenceScreen>
